[package]
name = "rustreams"
version = "0.1.0"
authors = ["David Sauer <davedamoon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = "0.28.0"
maplit = "1.0.2"
rand = "0.8.4"
tokio = { version = "1.16.1", features = ["full"] }
env_logger = "0.9.0"
log = "0.4.14"
futures = "0.3.21"
serde = "1.0.136"
serde_json = "1.0.78"
async-trait = "0.1.52"
tokio-postgres = "0.7.5"
postgres-protocol = "0.6.3"

[profile.release]
lto = true
codegen-units = 1
