[package]
name = "rustreams"
version = "0.1.0"
authors = ["David Sauer <davedamoon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = "0.28.0"
env_logger = "0.9.0"
log = "0.4.14"
futures = "0.3.21"
async-trait = "0.1.52"
async-std = { version = "1.10.0", features = ["attributes"] }
#ctrlc = { version = "3.2.1", features = ["termination"] }

[profile.release]
lto = true
codegen-units = 1
