[package]
name = "rustreams"
version = "0.1.0"
authors = ["David Sauer <davedamoon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = "0.26.0"
maplit = "1.0.2"
rand = "0.8.5"
tokio = { version = "1.5.0", features = ["full"] }
env_logger = "0.8.3"
log = "0.4.14"
futures = "0.3.14"
serde = "1.0.125"
serde_json = "1.0.64"
async-trait = "0.1.50"
tokio-postgres = "0.7.2"

[profile.release]
lto = true
codegen-units = 1
